# pyosrm

./: .gitignore  CHANGELOG.md  MANIFEST.in  pyproject.toml  setup.py
scripts/: build-extension.py  config.py
src/: boost.pxd  osrm.pxd
src/pyosrm/: __init__.py  _core.pyx
