[tool.poetry]
name = "pyosrm"
version = "0.1.1"
license = "MIT"
description="Cython wrapper of osrm-backend to be used in Python"
authors = [ "Luca Di Gaspero", "Enrico Davini"]
repository = "https://github.com/liuq/pyosrm"
readme = "README.md"
packages = [{include = "pyosrm", from = "src"}]
include = [
    { path = "src/pyosrm/**/*.so", format = "wheel" },
]
exclude = [
    "**/*.cpp"
]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=61", "wheel", "Cython>=3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cythonize]
language_level = "3"

[tool.poetry.build]
script = "scripts/build-extension.py"
